--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>MissionFit - Your Trusted Dental Care Partner</title>
+  <title>pulsefit - Get Fit Get a better life</title>
 
   <!-- Meta Description -->
   <meta name="description" content="MissionFit offers exceptional dental care services with a patient-first approach. Experience world-class dental treatments for a brighter, healthier smile.">
